cmake_minimum_required(VERSION 3.13)
project(untitled C)

set(CMAKE_C_STANDARD 99)

add_executable(untitled mainMenu.h mainMenu.c AIgame.h AIgame.c adminLog.h adminLog.c account.c account.h adminMenu.c adminMenu.h readerControl.c readerControl.h readerMenu.c readerMenu.h book.c book.h File.c File.h account.c account.h adminLog.c adminLog.h adminMenu.c adminMenu.h AIgame.c AIgame.h book.c book.h bookFile.c bookFile.h File.c File.h mainMenu.c mainMenu.h readerControl.c readerControl.h readerMenu.c readerMenu.h timenow.c timenow.h)